fix(checkout-process-v2): done process action, addon mobile optimization

--- a/src/app/checkout-page/add-on-list/add-on/add-on.component.scss
+++ b/src/app/checkout-page/add-on-list/add-on/add-on.component.scss
@@ -17,9 +17,11 @@
   &:hover {
     color: $color-gray-5;
   }
-
   @media screen and (max-width: 960px) {
-    margin-top: 5px;
+    padding: 5px 0;
+    &:hover {
+      color: inherit;
+    }
   }
 }
 
@@ -39,5 +41,6 @@
   @media screen and (max-width: 960px) {
     font-size: 14px;
     padding: 0;
+    color: $color-gray-5;
   }
 }
